--- a/index.html
+++ b/index.html
@@ -1,10 +1,13 @@
-<!DOCTYPE html5>
-
-<html5> 
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Primera Pagina Con JavaScript</title>
+</head>
 <body>
-
-<script src="/javascript.js"></script>
-
+    <h1> Bienvenido !!! </h1>
+    <script src="/javascript.js"></script> 
 </body>
+</html>
 
-</html5>
