--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <h1> Bienvenido !!! </h1>
-    <script src="/javascript.js"></script> 
+    <script src="javascript.js"></script> 
 </body>
 </html>
 
