--- a/index.html
+++ b/index.html
@@ -47,15 +47,17 @@
             <h1 id="tituloPrincipal">Lady Yoga Clothing Co.</h1>
             <form class="form-inline">
             <input
+                id="input1"
                 class="form-control mr-md-2"
                 type="search"
                 placeholder="Search"
                 aria-label="Search"
+                onkeypress="capturarEnter(event);"
             />
             </form>
             <div id="botonSearch">
-            <button class="btn btn-outline-success my-2 my-sm-0" type="submit">
-                Search
+            <button onclick="buenaBusqueda()" id="botonBusqueda" class="btn btn-outline-success my-2 my-sm-0" type="submit">
+                Go
             </button>
             </div>
         </div>
