jugando con el Logo ONMOUSEOVER

--- a/index.html
+++ b/index.html
@@ -40,10 +40,9 @@
 
         <div class="container">
         <div class="topnav">
-            <img
-            id="logo"
-            src="https://i.ibb.co/jkx1R3y/Logo-Lady-Yoga-Pagina-Coder.png">
-        
+            <img id="logo" onmouseover="bigImg(this)" onmouseout="normalImg(this)" border="0" src="https://i.ibb.co/jkx1R3y/Logo-Lady-Yoga-Pagina-Coder.png" alt="Smiley" width="132" height="132">
+
+
             <h1 id="tituloPrincipal">Lady Yoga Clothing Co.</h1>
             <form class="form-inline">
             <input
