--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
         </div>
 
         <div class="container1">
-          <div class="row1">
+          <div class="row">
             <div class="four columns">
               <h2></h2>
             </div>
@@ -249,6 +249,9 @@
         </div>
         </div>
     </div>
+    <script src="https://code.jquery.com/jquery-3.5.1.js"
+    integrity="sha256-QWo7LDvxbWT2tbbQ97B53yJnYU3WhH/C8ycbRAkjPDc="
+    crossorigin="anonymous"></script>
     <script src="javascript.js"></script>
   </body>
   <footer class="footer">
