--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
                     </table>
     
                     <a href="#" id="vaciar-carrito" class="button u-full-width">Clear Cart</a>
-                    <a href="#" id="compra-realizada" class="button u-full-width">Finalizar Compra</a>
+                    <a href="#" id="random-product" class="button u-full-width">Buy Anything</a>
                   </div>
                 </li>
               </ul>
